--- a/trackshift/src/App.css
+++ b/trackshift/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -30,14 +31,6 @@ img {
   transform: scale(1.2);
 }
 
-/* .signup {
-  height: 100%;
-}
-input {
-  width: 100%;
-  height: 70%;
-} */
-
 .remember-me {
   margin-right: 5px;
 }
@@ -51,19 +44,13 @@ input {
 .playlistList {
   width: 380px;
   height: 530px;
-  /* margin-left: 50px;
-  margin-right: 50px; */
-  /* border-color: #f30adf; */
-  /* border-radius: 50px; */
 }
 
 .platformSelect {
   align-self: center;
-  /* margin-top: 70px; */
 }
 
 .btn-migrate {
-  /* background-color: rgb(101, 209, 101); */
   height: 50px;
   margin-left: 70px;
   margin-right: 70px;
@@ -117,6 +104,45 @@ input {
   flex: 1;
 }
 
+.settings {
+  flex: 1;
+  padding-top: 1%;
+  padding-right: 1%;
+}
+
+.settingSelect {
+  flex: 1;
+}
+
+.sidebar {
+  height: 100%;
+  width: 25%;
+  margin-right: 1%;
+  background-color: rgb(239, 235, 235);
+}
+
+.overlay {
+  position: relative;
+  overflow: hidden;
+  background-color: rgb(255, 255, 255);
+  height: 50vh;
+  margin-left: 25vw;
+  margin-right: 25vw;
+  margin-top: 25vh;
+  margin-bottom: 25vh;
+  z-index: 1;
+}
+
+.backdrop {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9998;
+  background: rgba(0, 0, 0, 0.3);
+}
+
 .lds-ellipsis {
   display: inline-block;
   position: relative;
@@ -130,7 +156,6 @@ input {
   height: 13px;
   border-radius: 50%;
   background: #1b3b44;
-  /* background: #fff; */
  animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds-ellipsis div:nth-child(1) {
