--- a/trackshift/src/App.css
+++ b/trackshift/src/App.css
@@ -133,6 +133,17 @@ img {
   z-index: 1;
 }
 
+.migrate-load-overlay {
+  position: relative;
+  overflow: hidden;
+  background-color: rgb(255, 255, 255);
+  height: 20vh;
+  width: 20vw;
+  margin-left: 40vw;
+  margin-top: 40vh;
+  z-index: 1;
+}
+
 .backdrop {
   position: absolute;
   top: 0px;
@@ -174,6 +185,45 @@ img {
   left: 56px;
   animation: lds-ellipsis3 0.6s infinite;
 }
+
+.lds-facebook {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 8px;
+  width: 16px;
+  background: #0d6efd;
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+  left: 8px;
+  animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+  left: 32px;
+  animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+  left: 56px;
+  animation-delay: 0;
+}
+
+@keyframes lds-facebook {
+  0% {
+    top: 8px;
+    height: 64px;
+  }
+  50%, 100% {
+    top: 24px;
+    height: 32px;
+  }
+}
+
 @keyframes lds-ellipsis1 {
   0% {
     transform: scale(0);
