--- a/trackshift/src/App.css
+++ b/trackshift/src/App.css
@@ -44,6 +44,7 @@ img {
 .playlistList {
   width: 380px;
   height: 530px;
+  box-shadow: 4.0px 8.0px 8.0px hsl(0deg 0% 0% / 0.38);
 }
 
 .platformSelect {
@@ -99,6 +100,13 @@ img {
   color: white;
 }
 
+.trackshift-logo {
+  font-weight: bold;
+  font-size: x-large;
+  font-style: oblique;
+  margin-left: 1rem;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -135,9 +143,6 @@ img {
   background-color: rgb(239, 235, 235);
 }
 
-/* .listHeader {
-  color: #1759de;
-} */
 .overlay {
   position: relative;
   overflow: hidden;
